<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.3.3.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.unionbankng.future</groupId>
	<artifactId>future-authorization-server</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>future-authorization-server</name>
	<description>Authorization server for Project Future</description>

	<properties>
		<java.version>14</java.version>
		<spring-cloud.version>Hoxton.SR7</spring-cloud.version>
		<jib-maven-plugin.version>2.5.2</jib-maven-plugin.version>
	</properties>

	<dependencies>
		<!-- Spring cloud-->
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-config</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-oauth2</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-hateoas</artifactId>
			<version>2.3.3.RELEASE</version>
		</dependency>
		<!--Code Optimization-->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<!--Database-->
		<dependency>
			<groupId>com.microsoft.sqlserver</groupId>
			<artifactId>mssql-jdbc</artifactId>
			<scope>runtime</scope>
			<version>8.4.1.jre14</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<!--Azure-->
		<dependency>
			<groupId>com.microsoft.azure</groupId>
			<artifactId>azure-servicebus-jms-spring-boot-starter</artifactId>
			<version>2.1.7</version>
		</dependency>
		<!--Migration-->
		<dependency>
			<groupId>org.liquibase</groupId>
			<artifactId>liquibase-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.liquibase</groupId>
			<artifactId>liquibase-maven-plugin</artifactId>
			<version>4.0.0</version>
		</dependency>
		<!-- Documentations -->
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-boot-starter</artifactId>
			<version>3.0.0</version>
		</dependency>

		<!--test-->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!--GRPC-->
		<dependency>
			<groupId>com.unionbankng</groupId>
			<artifactId>future-utilityservice-interface</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>net.devh</groupId>
			<artifactId>grpc-client-spring-boot-starter</artifactId>
			<version>2.7.0.RELEASE</version>
		</dependency>
		<!--Caching -->
		<dependency>
			<groupId>com.googlecode.xmemcached</groupId>
			<artifactId>xmemcached</artifactId>
			<version>2.4.6</version>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.liquibase</groupId>
				<artifactId>liquibase-maven-plugin</artifactId>
				<version>4.0.0</version>
				<configuration>
					<propertyFile>
						src/main/resources/liquibase.properties</propertyFile>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.liquibase.ext</groupId>
						<artifactId>liquibase-hibernate5</artifactId>
						<version>4.0.0</version>
					</dependency>
					<!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
					<dependency>
						<groupId>com.microsoft.sqlserver</groupId>
						<artifactId>mssql-jdbc</artifactId>
						<version>8.4.1.jre14</version>
					</dependency>
					<dependency>
						<groupId>org.springframework.boot</groupId>
						<artifactId>spring-boot-starter-data-jpa</artifactId>
						<version>2.3.3.RELEASE</version>
					</dependency>
					<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
					<dependency>
						<groupId>javax.validation</groupId>
						<artifactId>validation-api</artifactId>
						<version>2.0.1.Final</version>
					</dependency>

					<dependency>
						<groupId>com.unionbankng</groupId>
						<artifactId>future-utilityservice-interface</artifactId>
						<version>1.0-SNAPSHOT</version>
					</dependency>

				</dependencies>
			</plugin>
			<plugin>
				<artifactId>jib-maven-plugin</artifactId>
				<groupId>com.google.cloud.tools</groupId>
				<version>${jib-maven-plugin.version}</version>
				<configuration>
					<from>
						<image>adoptopenjdk/openjdk14:alpine-jre-nightly</image>
					</from>
					<to>
						<auth>
							<!--suppress UnresolvedMavenProperty -->
							<username>${ACR_USERNAME}</username>
							<!--suppress UnresolvedMavenProperty -->
							<password>${ACR_PASSWORD}</password>
						</auth>
						<!--suppress UnresolvedMavenProperty -->
						<image>${ACR_SERVER}/${project.artifactId}</image>
					</to>
					<container>
						<environment>
							<!--suppress UnresolvedMavenProperty -->
							<FUTURE_ENV>${FUTURE_ENV}</FUTURE_ENV>
						</environment>
					</container>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>maven-group</id>
			<url>http://168.63.73.171:8081/nexus/content/groups/maven-group/</url>
		</repository>
	</repositories>
</project>
